style.css: add author info

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /**
  * Theme Name: Rehoboth Twenty Twenty-Four
+ * Theme URI: https://github.com/tanyabouman/rehoboth-twentytwentyfour
+ * Author: Tanya Bouman
  * Template:   twentytwentyfour
  */
